[gd_scene load_steps=6 format=3 uid="uid://dsn30nr2ia876"]

[ext_resource type="Script" path="res://Scenes/Menus/main_menu.gd" id="1_eceyr"]
[ext_resource type="Texture2D" uid="uid://blssnml87fxu0" path="res://Resources/Sprites/UI/Menus/MainMenu.png" id="1_ptjwj"]
[ext_resource type="PackedScene" uid="uid://chvldwh2dohef" path="res://Scenes/Menus/MenuComponents/menu_button.tscn" id="2_px8yb"]
[ext_resource type="Texture2D" uid="uid://b8ehphkjs1iwr" path="res://Resources/Sprites/UI/Menus/MenuPanel.png" id="2_rs48y"]
[ext_resource type="Texture2D" uid="uid://jjf8nqdqebyp" path="res://Resources/Sprites/UI/Menus/MenuReticle.png" id="3_j8tev"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eceyr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ptjwj")

[node name="ReticleContainer" type="CenterContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 378.0
offset_top = 278.0
offset_right = 712.0
offset_bottom = 540.0

[node name="Reticle" type="TextureRect" parent="TextureRect/ReticleContainer"]
layout_mode = 2
texture = ExtResource("3_j8tev")

[node name="Marker2D" type="Marker2D" parent="TextureRect"]
position = Vector2(615, 46)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = -52.0
offset_top = 322.0
offset_right = 378.0
offset_bottom = 615.0
texture = ExtResource("2_rs48y")
patch_margin_left = 44
patch_margin_top = 32
patch_margin_right = 40
patch_margin_bottom = 33

[node name="ColorRect" type="ColorRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 76.0
offset_top = 40.0
offset_right = 258.0
offset_bottom = 100.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 78.0
offset_top = 38.0
offset_right = 256.0
offset_bottom = 102.0
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 278.0
offset_top = 40.0
offset_right = 400.0
offset_bottom = 100.0
color = Color(0, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 280.0
offset_top = 38.0
offset_right = 398.0
offset_bottom = 102.0
color = Color(0, 0, 0, 1)

[node name="ColorRect5" type="ColorRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 76.0
offset_top = 132.0
offset_right = 258.0
offset_bottom = 192.0
color = Color(0, 0, 0, 1)

[node name="ColorRect6" type="ColorRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 78.0
offset_top = 130.0
offset_right = 256.0
offset_bottom = 194.0
color = Color(0, 0, 0, 1)

[node name="ColorRect7" type="ColorRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 278.0
offset_top = 132.0
offset_right = 400.0
offset_bottom = 192.0
color = Color(0, 0, 0, 1)

[node name="ColorRect8" type="ColorRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 280.0
offset_top = 130.0
offset_right = 398.0
offset_bottom = 194.0
color = Color(0, 0, 0, 1)

[node name="StartGameButton" parent="." instance=ExtResource("2_px8yb")]
layout_mode = 0
offset_left = 26.0
offset_top = 354.0
offset_right = 204.0
offset_bottom = 422.0
text = "Start Game"

[node name="SettingsButton" parent="." instance=ExtResource("2_px8yb")]
layout_mode = 0
offset_left = 26.0
offset_top = 446.0
offset_right = 204.0
offset_bottom = 514.0
text = "Settings"

[node name="QuitButton" parent="." instance=ExtResource("2_px8yb")]
layout_mode = 0
offset_left = 228.0
offset_top = 446.0
offset_right = 346.0
offset_bottom = 514.0
text = "Quit"
plays_sound = false

[node name="CreditsButton" parent="." instance=ExtResource("2_px8yb")]
layout_mode = 0
offset_left = 228.0
offset_top = 354.0
offset_right = 346.0
offset_bottom = 422.0
text = "Credits"

[connection signal="pressed" from="StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
